# credit-scoring-plutus-smart-contract

./: .gitignore  README.md  cabal.project  credit-scoring.cabal
app/: CreditScoringApp.hs  LendingApp.hs  Main.hs  ManageApp.hs  MintApp.hs  ParameterizedApp.hs
built-contracts/: credit-scoring.json  lending.json  manage-score-parameterized.json  manage-score.json  mint-score-parameterized.json  mint-score.json
js/: package.json
js/src/: 1-mint-scoring-nft.js  1-mint-scoring-token.js  1-operator-mint-scoring-nft.js  2-update-score.js  2.1-operator-create-lending-packages.js  2.2-user-borrow.js  2.3-user-payback.js  2.4-operator-claim-funds.js  address-info.txt
js/src/utils/: collect-user-info.js  create-manage-ref-script.js  create-mint-ref-script.js  create-ref-script.js  from-addr-to-pkh.js  from-pkh-to-addr.js  from-revenue-addr-to-pkh.js  from-script-to-addr.js  get-scoring-token-policyid.js  query-data.js  send.js
src/: CreditScoringContract.hs  GeneralParams.hs  LendingContract.hs  ManageScoringToken.hs  MintScoringToken.hs  Utility.hs
test/: PTCreditScoringContract.hs  PTLendingContract.hs  PTManage.hs  PTMint.hs
